commit refactor classes, javadoc, new class selectcallbackhendler